--- a/My_Theme_Collection/BNHA.theme.css
+++ b/My_Theme_Collection/BNHA.theme.css
@@ -5,6 +5,10 @@
  * @version 4
  */
 
+ .section-2gLsgF {
+    background-color: rgba(0, 0, 0, .2);
+}
+
 @import url('https://fonts.googleapis.com/css?family=Livvic&display=swap');
 
 body, div, span, textarea, ::-webkit-input-placeholder {
