--- a/My_Theme_Collection/Kemono_Friends.theme.css
+++ b/My_Theme_Collection/Kemono_Friends.theme.css
@@ -6,6 +6,12 @@
  */
 @import url('https://fonts.googleapis.com/css?family=Livvic&display=swap');
 
+
+.section-2gLsgF {
+    background-color: rgba(0, 0, 0, .2);
+}
+
+
 body, div, span, textarea, ::-webkit-input-placeholder {
     font-family: 'Livvic', sans-serif;
 }
