Missed one oops

--- a/My_Theme_Collection/NewAkameGaKill.theme.css
+++ b/My_Theme_Collection/NewAkameGaKill.theme.css
@@ -6,7 +6,7 @@
  */
 
 /* Main Background */
- .app-2CXKsg {
+.app-2CXKsg {
     background-image: url(https://images5.alphacoders.com/598/598858.jpg);
     background-size: cover;
     background-color: transparent;
@@ -2170,6 +2170,10 @@
 
 .folderIconWrapper-1oRIZr {
     border-radius: 4px;
+}
+
+.applicationStore-2nk7Lo, .scroller-29cQFV {
+    background-color: transparent;
 }
 
 .bd-toast {
