New Rem Theme and others
Someone wanted the Rem theme back and here it is

--- a/My_Theme_Collection/NewAkameGaKill.theme.css
+++ b/My_Theme_Collection/NewAkameGaKill.theme.css
@@ -2176,6 +2176,11 @@
     background-color: transparent;
 }
 
+.botTagRegular-kpctgU {
+    background: #912;
+}
+
+
 .bd-toast {
     background-color: #912;
     box-shadow: none;
