--- a/My_Theme_Collection/NewBNHA.theme.css
+++ b/My_Theme_Collection/NewBNHA.theme.css
@@ -31,6 +31,11 @@
 
 /* -------------------------------------------- */
 
+.botTagRegular-kpctgU {
+    background: #2AB;
+}
+
+
 .attendeeCTA-2etnq5 {
     color: white;
     line-height: 13px;
