--- a/My_Theme_Collection/NewKemonoFriends.theme.css
+++ b/My_Theme_Collection/NewKemonoFriends.theme.css
@@ -31,6 +31,11 @@
 
 /* -------------------------------------------- */
 
+.botTagRegular-kpctgU {
+    background: #f44;
+}
+
+
 .theme-dark .closeButton-PCZcma {
     border: none;
     background-color: rgba(0,0,0,.2);
