--- a/My_Theme_Collection/NewAkameGaKill.theme.css
+++ b/My_Theme_Collection/NewAkameGaKill.theme.css
@@ -1,7 +1,7 @@
 /**
- * @name New Akama Ga Kill! Theme
+ * @name New Akame Ga Kill! Theme
  * @author ShadowDevilsAvenged
- * @description Newer Akama Ga Kill! theme for my return
+ * @description Newer Akame Ga Kill! theme for my return
  * @version 1
  */
 
