Small Bubble Update

--- a/My_Theme_Collection/BubbleThemev2.theme.css
+++ b/My_Theme_Collection/BubbleThemev2.theme.css
@@ -37,6 +37,42 @@
     background-color: transparent;
 }
 
+.clickable-28SzVr:hover .layout-1qmrhw {
+    background-image: radial-gradient(circle closest-side at 15px 15px, rgba(255, 255, 255, .85) 10%, rgba(7, 215, 0, 0.29) 100%, rgba(7, 215, 0, 0.29) 100%);
+    background-color: transparent;
+    box-shadow: inset 3px 3px 9px 3px rgba(231, 254, 255, 0.53), inset -8px -14px 9px -16px rgba(231, 254, 255, 0.33);
+    border-radius: 50pc;
+}
+
+.theme-dark .perksModal-CLcR1c {
+    background-color: transparent;
+}
+
+.headerBlurb-m6Avyp {
+    color: white;
+}
+
+.headerBlurb-m6Avyp a {
+    color: white;
+}
+
+.theme-dark .tierBody-3ju-rc {
+    background-color: transparent;
+}
+
+
+.theme-dark .tierHeaderLocked-3ItHYn {
+    background-color: transparent;
+    color: white;
+}
+
+.ctaBar-Nhk8yY {
+    background-color: transparent;
+}
+
+.theme-dark .tierMarkerBackground-G8FoN4 {
+    background-color: transparent;
+}
 
 
 .wrapper-3kah-n::after, .circleIconButton-1VxDrg::after {
