--- a/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
+++ b/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
@@ -1215,7 +1215,7 @@
   background-color: rgba(0, 0, 0, .23);
 }
 
-.icon-3g7qdA, .textArea-2CLwUE, .codeBlockSyntax-2MZ-Qy, .syntaxAfter-OxiKEl, .syntaxBefore-3pDAmR {
+.icon-3g7qdA, .textArea-2CLwUE, .codeBlockSyntax-3mFGiA, .syntaxAfter-2_BrZf, .syntaxBefore-3epS3C {
   color: white;
 }
 
@@ -1229,7 +1229,7 @@
   box-shadow: none;
 }
 
-.after_inlineCode-WydEur, .before_inlineCode-xn8Llh, .inlineCode-2auMQi {
+.after_inlineCode-2_JXPm, .before_inlineCode-1zngJj, .inlineCode-ERyvy_ {
   background: rgba(0, 0, 0, .26);
   padding: .3em 0;
 }
@@ -2534,7 +2534,7 @@
 .standardSidebarView-E9Pc3j a, .imageDetails-1t6Zms a, .primary-jw0I4K a, .footer-1Ip3Sd a, .lookLink-15mFoz.colorLink-1Md3RZ,
 .bda-slist .bda-footer a, .markup-eYLPri a, .welcomeMessage-ULm0mo a, .theme-dark .filenameLinkWrapper-3Rc6sk, .theme-dark .filenameLinkWrapper-3Rc6sk a,
 .topic-11NuQZ a, .emptyStateCTA-206J-N a, .helpText-h3r3wC a, .colorStandard-21JIj7 a,
-.editChannelButton-1dYN-G, .fakeLink-2FvUR7, .button-1kija8,
+.editChannelButton-1dYN-G, .fakeLink-1wGafz, .button-1kija8,
 .footerText-2QLGHU a {
   color: lightgreen;
 }
