--- a/My_Theme_Collection/Old-BNHA-Theme.theme.css
+++ b/My_Theme_Collection/Old-BNHA-Theme.theme.css
@@ -2221,15 +2221,15 @@
      padding-top: 4px !important;
  }
  
- .after_inlineCode-WydEur, 
- .before_inlineCode-xn8Llh, 
- .inlineCode-2auMQi {
+ .after_inlineCode-2_JXPm, 
+ .before_inlineCode-1zngJj, 
+ .inlineCode-ERyvy_ {
    background: rgba(255,255,255, .1);
    padding: 3px;
  }
- .codeBlockSyntax-2MZ-Qy, 
- .syntaxAfter-OxiKEl, 
- .syntaxBefore-3pDAmR {
+ .codeBlockSyntax-3mFGiA, 
+ .syntaxAfter-2_BrZf, 
+ .syntaxBefore-3epS3C {
    color: white;
  }
  
@@ -2307,7 +2307,7 @@
    .lookLink-15mFoz.colorBrand-I6CyqQ,
    .emptyStateSubtext-2njjqg a,
    .theme-dark .container-1ILvLB section a,
-   .fakeLink-2FvUR7,
+   .fakeLink-1wGafz,
    .metadataContent-lalfZ3 a,
    .editChannelButton-1dYN-G {
        color: #66cff9;
